--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "dependencies": {},
   "devDependencies": {},
   "optionalDependencies": {},
-  "engines": {}
+  "engines": {},
+  "bugs": {
+    "url": "https://github.com/adamcik/media-progress-timer/issues"
+  },
+  "main": "timer.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "license": "Apache-2.0"
 }
